# ktn

./: .gitignore  LICENSE.md  README  README.md  decimal.js  fraction.js  long.js  package.json
c/: Makefile  bool.h  cktn.sln  cktn.vcxproj  logger.c  logger.h  string.c  test.c
c/math/: Makefile  long.c  long.h  main.c  math.vcxproj  test.c  test.h  ulong.c  ulong.h  unittest.cc
c/test/: test.vcxproj  unittest.cc
c/unix/: CMakeLists.txt  Makefile  bool.h  logger.c  logger.h  string.h  test.c
c/unix/samples/: CMakeLists.txt  main.c  math-test.c  math-test.h  test.c
c/win/: CMakeLists.txt  build.bat  cktn.sln  cktn.vcxproj  cktn.vcxproj.filters  logger.c  logger.h  string.c  string.h  test.c
c/win/include/ktn/: bool.h  logger.h  string.h
c/win/include/ktn/math/: long.h
c/win/math/: long.c  long.h  main.c  math.vcxproj  math.vcxproj.filters  test.c  test.h
c/win/samples/: main.c  math-test.c  math-test.h  test.c
c/win/src/: logger.c  string.c
c/win/src/math/: long.c
c/win/test/: CMakeLists.txt  test.vcxproj  test.vcxproj.filters  unittest.cc
cpp/: Makefile  array.h  dbg.h  ktn.sln  ktn.vcxproj  logformat.h  logging.h  string.cc  string.h  tchar.h  test.cc  util.h
cpp/cpp/: Makefile  complex.h  fraction.cpp  fraction.h  long.cpp  long.h  math.h  test.cpp  ulong.cpp  ulong.h
cpp/math/: Makefile  complex.h  fraction.cc  fraction.h  long.cc  long.h  main.cc  math.h  math.vcxproj  matrix.h  test.cc  test.h  ulong.cc  ulong.h  unittest.cc  vector.h
cpp/test/: test.vcxproj  unittest.cc
cpp/unix/: CMakeLists.txt  Makefile  date.cc  date.h  date.inl  date_format.cc  date_format.h  dbg.h  logformat.h  logformatw.h  logging.h  string.cc  string.h  stringw.cc  test.cc  util.h
cpp/win/: CMakeLists.txt  array.h  date.cc  date.h  date_format.cc  date_format.h  dbg.h  doc.h  doc.txt  httprequest.cc  httprequest.h  httpresponse.cc  httpresponse.h  httpserver.cc  httpserver.h  index.html  ktn.sln  ktn.vcxproj  ktn.vcxproj.filters  log.txt  logformat.h  logformatw.h  logger.cc  logger.h  loggerw.cc  loggerw.h  logging.h  loggingw.h  loglevel.h  string.cc  string.h  stringw.cc  stringw.h  test.cc  uri.cc  uri.h  util.h
cpp/win/samples/: CMakeLists.txt  main.cc  math-test.cc  math-test.h  test.cc
js/: Gruntfile.js  compilejs.bat  compilejs.py  esl.bat  eslint.json  jsdoc.bat  karma.conf.js  lint.bat  package.json  report.bat  server.bat  server.js  yuidoc.json
test/: decimal.htm  decimal.js  fraction.htm  fraction.js  long.htm  long.js
ts/: compilejs.bat  makejs.bat
(+178 files in other folders)
